correct size & alignment for thumbnail links

--- a/styles/main.css
+++ b/styles/main.css
@@ -58,8 +58,11 @@ a {
 .thumbnail-title {
   margin-bottom: 3px;
   margin-left: 5px;
+  text-align: left;
 }
 
 .thumbnail-blurb {
+  font-size: 14px;
+  text-align: left;
   margin-left: 5px;
 }
